--- a/public/css/styleClient.css
+++ b/public/css/styleClient.css
@@ -1,3 +1,7 @@
 .providerLinkingMsg-preLink-connect_error {
     display: none!important;
 }
+
+.form-group.domain-field-0 {
+    display: none!important;
+}
